examples/test/testpolicy16155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16155
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key6: value47
      key28: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value45
          key27: value5
          key14: value30
      podSelector:
        matchLabels:
          key44: value44
          key15: value47
          key17: value8
